lexion_lang/tests/snapshots/x86_machine__x86_machine_reports_unsupported_call_tuple_arg.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: "compile_machine_code_error(\"backend/x86_unsupported_call_tuple_arg.lex\").join(\"\\n\")"
snapshot_kind: text
---
x86 machine-code backend does not support register-pair aggregate ABI values yet: (i32, bool, i32)
x86 machine-code backend does not support non-integer aggregate ABI values yet: (i32, bool, i32)
