lexion_lang/tests/snapshots/x86_machine__x86_machine_reports_unsupported_fixed_vararg_calls.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: "compile_machine_code_error(\"backend/x86_unsupported_vararg_fixed.lex\").join(\"\\n\")"
snapshot_kind: text
---
x86 machine-code backend does not support vararg function signatures yet: take
x86 machine-code backend does not support calls to vararg functions yet: take
