lexion_lang/tests/snapshots/x86_machine__x86_machine_reports_unsupported_float_operations.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: "compile_machine_code_error(\"backend/x86_unsupported_float_ops.lex\").join(\"\\n\")"
snapshot_kind: text
---
x86 machine-code backend does not support f32 parameters, calls, or returns yet: f32
