lexion_lang/tests/snapshots/x86_machine__x86_machine_reports_unsupported_function_values.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: "compile_machine_code_error(\"backend/x86_unsupported_function_value.lex\").join(\"\\n\")"
snapshot_kind: text
---
x86 machine-code backend does not support function values yet: fn (i32) -> i32
x86 machine-code backend does not support indirect calls through function values yet: handler
