lexion_lang/tests/snapshots/x86_machine__x86_machine_reports_unsupported_index_expressions.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: "compile_machine_code_error(\"backend/x86_unsupported_index.lex\").join(\"\\n\")"
snapshot_kind: text
---
x86 machine-code backend does not support string values yet: &str
x86 machine-code backend does not support index expression lowering yet
