lexion_lang/tests/snapshots/x86_machine__x86_machine_reports_unsupported_indirect_float_aggregates.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: "compile_machine_code_error(\"backend/x86_unsupported_indirect_float_aggregate.lex\").join(\"\\n\")"
snapshot_kind: text
---
x86 machine-code backend does not support indirect aggregate ABI values yet: Mixed
x86 machine-code backend does not support non-integer aggregate ABI values yet: Mixed
