lexion_lang/tests/snapshots/x86_machine__x86_machine_reports_unsupported_reference_dereference.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: "compile_machine_code_error(\"backend/x86_unsupported_dereference.lex\").join(\"\\n\")"
snapshot_kind: text
---
x86 machine-code backend does not support reference creation yet
x86 machine-code backend does not support reference values yet: &i32
x86 machine-code backend does not support stores through dereference expressions yet
x86 machine-code backend does not support dereference expressions yet
